Works with curl -XPUT http://localhost:8080/rpm/upload/1/file -T file