@@ -1,2 +1,5 @@
 # rpm-repo
 Simple app for hosting a rpm repo
+
+export MAVEN_OPTS="--add-modules java.xml.ws.annotation,java.xml.bind"
+mvn reststop:boot
